@@ -168,7 +168,7 @@ public class SandboxClassLoaderTest {
     Class<?> exampleClass = loadClass(AnExampleClass.class);
     Method normalMethod = exampleClass.getMethod("normalMethod", String.class, int.class);
 
-    Object exampleInstance = exampleClass.newInstance();
+    Object exampleInstance = exampleClass.getDeclaredConstructor().newInstance();
     assertEquals("response from methodInvoked: AnExampleClass.normalMethod(java.lang.String value1, int 123)",
         normalMethod.invoke(exampleInstance, "value1", 123));
     assertThat(transcript).containsExactly(
@@ -182,7 +182,7 @@ public class SandboxClassLoaderTest {
     String methodName = shadow.directMethodName("normalMethod");
     Method directMethod = exampleClass.getDeclaredMethod(methodName, String.class, int.class);
     directMethod.setAccessible(true);
-    Object exampleInstance = exampleClass.newInstance();
+    Object exampleInstance = exampleClass.getDeclaredConstructor().newInstance();
     assertEquals("normalMethod(value1, 123)", directMethod.invoke(exampleInstance, "value1", 123));
     assertThat(transcript).containsExactly(
         "methodInvoked: AnExampleClass.__constructor__()");
@@ -224,7 +224,7 @@ public class SandboxClassLoaderTest {
     classHandler.valueToReturn = 456;
 
     Method normalMethod = exampleClass.getMethod("normalMethodReturningInteger", int.class);
-    Object exampleInstance = exampleClass.newInstance();
+    Object exampleInstance = exampleClass.getDeclaredConstructor().newInstance();
     assertEquals(456, normalMethod.invoke(exampleInstance, 123));
     assertThat(transcript).containsExactly(
         "methodInvoked: AClassWithMethodReturningInteger.__constructor__()",
@@ -237,7 +237,7 @@ public class SandboxClassLoaderTest {
     classHandler.valueToReturn = 456;
 
     Method normalMethod = exampleClass.getMethod("normalMethodReturningDouble", double.class);
-    Object exampleInstance = exampleClass.newInstance();
+    Object exampleInstance = exampleClass.getDeclaredConstructor().newInstance();
     assertEquals(456.0, normalMethod.invoke(exampleInstance, 123d));
     assertThat(transcript).containsExactly(
         "methodInvoked: AClassWithMethodReturningDouble.__constructor__()",
@@ -248,7 +248,7 @@ public class SandboxClassLoaderTest {
   public void callingNativeMethodShouldInvokeClassHandler() throws Exception {
     Class<?> exampleClass = loadClass(AClassWithNativeMethod.class);
     Method normalMethod = exampleClass.getDeclaredMethod("nativeMethod", String.class, int.class);
-    Object exampleInstance = exampleClass.newInstance();
+    Object exampleInstance = exampleClass.getDeclaredConstructor().newInstance();
     assertEquals("response from methodInvoked: AClassWithNativeMethod.nativeMethod(java.lang.String value1, int 123)",
         normalMethod.invoke(exampleInstance, "value1", 123));
     assertThat(transcript).containsExactly(
@@ -259,7 +259,7 @@ public class SandboxClassLoaderTest {
   @Test
   public void directlyCallingNativeMethodShouldBeNoOp() throws Exception {
     Class<?> exampleClass = loadClass(AClassWithNativeMethod.class);
-    Object exampleInstance = exampleClass.newInstance();
+    Object exampleInstance = exampleClass.getDeclaredConstructor().newInstance();
     Method directMethod = findDirectMethod(exampleClass, "nativeMethod", String.class, int.class);
     assertThat(Modifier.isNative(directMethod.getModifiers())).isFalse();
 
@@ -269,7 +269,7 @@ public class SandboxClassLoaderTest {
   @Test
   public void directlyCallingNativeMethodReturningPrimitiveShouldBeNoOp() throws Exception {
     Class<?> exampleClass = loadClass(AClassWithNativeMethodReturningPrimitive.class);
-    Object exampleInstance = exampleClass.newInstance();
+    Object exampleInstance = exampleClass.getDeclaredConstructor().newInstance();
     Method directMethod = findDirectMethod(exampleClass, "nativeMethod");
     assertThat(Modifier.isNative(directMethod.getModifiers())).isFalse();
 
@@ -283,7 +283,7 @@ public class SandboxClassLoaderTest {
 
     Method directMethod = exampleClass.getMethod("normalMethodReturningBoolean", boolean.class, boolean[].class);
     directMethod.setAccessible(true);
-    Object exampleInstance = exampleClass.newInstance();
+    Object exampleInstance = exampleClass.getDeclaredConstructor().newInstance();
     assertEquals(true, directMethod.invoke(exampleInstance, true, new boolean[0]));
     assertThat(transcript).containsExactly(
         "methodInvoked: AClassWithMethodReturningBoolean.__constructor__()",
@@ -297,7 +297,7 @@ public class SandboxClassLoaderTest {
 
     Method directMethod = exampleClass.getMethod("normalMethodReturningArray");
     directMethod.setAccessible(true);
-    Object exampleInstance = exampleClass.newInstance();
+    Object exampleInstance = exampleClass.getDeclaredConstructor().newInstance();
     assertThat(transcript).containsExactly(
         "methodInvoked: AClassWithMethodReturningArray.__constructor__()");
     transcript.clear();
@@ -308,7 +308,7 @@ public class SandboxClassLoaderTest {
 
   @Test
   public void shouldInvokeShadowForEachConstructorInInheritanceTree() throws Exception {
-    loadClass(AChild.class).newInstance();
+    loadClass(AChild.class).getDeclaredConstructor().newInstance();
     assertThat(transcript).containsExactly(
         "methodInvoked: AGrandparent.__constructor__()",
         "methodInvoked: AParent.__constructor__()",
@@ -379,7 +379,7 @@ public class SandboxClassLoaderTest {
   @Test
   public void shouldInstrumentEqualsAndHashCodeAndToStringEvenWhenUndeclared() throws Exception {
     Class<?> theClass = loadClass(AClassWithoutEqualsHashCodeToString.class);
-    Object instance = theClass.newInstance();
+    Object instance = theClass.getDeclaredConstructor().newInstance();
     assertThat(transcript).containsExactly("methodInvoked: AClassWithoutEqualsHashCodeToString.__constructor__()");
     transcript.clear();
 
@@ -402,7 +402,7 @@ public class SandboxClassLoaderTest {
   @Test
   public void shouldAlsoInstrumentEqualsAndHashCodeAndToStringWhenDeclared() throws Exception {
     Class<?> theClass = loadClass(AClassWithEqualsHashCodeToString.class);
-    Object instance = theClass.newInstance();
+    Object instance = theClass.getDeclaredConstructor().newInstance();
     assertThat(transcript).containsExactly("methodInvoked: AClassWithEqualsHashCodeToString.__constructor__()");
     transcript.clear();
 
@@ -425,7 +425,7 @@ public class SandboxClassLoaderTest {
   @Test
   public void shouldProperlyCallSuperWhenForcingDeclarationOfEqualsHashCodeToString() throws Exception {
     Class<?> theClass = loadClass(AnInstrumentedClassWithoutToStringWithSuperToString.class);
-    Object instance = theClass.newInstance();
+    Object instance = theClass.getDeclaredConstructor().newInstance();
     assertThat(transcript).containsExactly("methodInvoked: AnInstrumentedClassWithoutToStringWithSuperToString.__constructor__()");
     transcript.clear();
 
@@ -453,7 +453,7 @@ public class SandboxClassLoaderTest {
   public void shouldFixTypesInFieldAccess() throws Exception {
     setClassLoader(new SandboxClassLoader(createRemappingConfig()));
     Class<?> theClass = loadClass(AClassThatRefersToAForgettableClassInItsConstructor.class);
-    Object instance = theClass.newInstance();
+    Object instance = theClass.getDeclaredConstructor().newInstance();
     Method method = theClass.getDeclaredMethod(shadow.directMethodName(ShadowConstants.CONSTRUCTOR_METHOD_NAME));
     method.setAccessible(true);
     method.invoke(instance);
@@ -473,7 +473,7 @@ public class SandboxClassLoaderTest {
         .build()));
 
     Class<?> theClass = loadClass(AClassThatRefersToAForgettableClass.class);
-    Object instance = theClass.newInstance();
+    Object instance = theClass.getDeclaredConstructor().newInstance();
     Object output = theClass.getMethod("interactWithForgettableClass").invoke(shadow.directlyOn(instance, (Class<Object>) theClass));
     assertEquals("null, get this!", output);
   }
@@ -485,7 +485,7 @@ public class SandboxClassLoaderTest {
         .build()));
 
     Class<?> theClass = loadClass(AClassThatRefersToAForgettableClass.class);
-    Object instance = theClass.newInstance();
+    Object instance = theClass.getDeclaredConstructor().newInstance();
     Object output = theClass.getMethod("interactWithForgettableStaticMethod").invoke(shadow.directlyOn(instance, (Class<Object>) theClass));
     assertEquals("yess? forget this: null", output);
   }
@@ -586,7 +586,7 @@ public class SandboxClassLoaderTest {
         .addInterceptedMethod(new MethodRef(AClassToForget.class, "*"))
         .build()));
     Class<?> theClass = loadClass(AClassThatRefersToAForgettableClassInMethodCallsReturningPrimitive.class);
-    Object instance = theClass.newInstance();
+    Object instance = theClass.getDeclaredConstructor().newInstance();
     Method m = theClass.getDeclaredMethod(methodName);
     m.setAccessible(true);
     return m.invoke(shadow.directlyOn(instance, (Class<Object>) theClass));
@@ -613,7 +613,7 @@ public class SandboxClassLoaderTest {
         .build()));
 
     Class<?> theClass = loadClass(AClassThatRefersToAForgettableClassInMethodCallsReturningPrimitive.class);
-    Object instance = theClass.newInstance();
+    Object instance = theClass.getDeclaredConstructor().newInstance();
     shadow.directlyOn(instance, (Class<Object>) theClass, "longMethod");
     assertThat(transcript).containsExactly(
         "methodInvoked: AClassThatRefersToAForgettableClassInMethodCallsReturningPrimitive.__constructor__()",
@@ -629,7 +629,7 @@ public class SandboxClassLoaderTest {
 
     setClassLoader(new SandboxClassLoader(config));
     Class<?> theClass = loadClass(AClassThatCallsAMethodReturningAForgettableClass.class);
-    theClass.getMethod("callSomeMethod").invoke(shadow.directlyOn(theClass.newInstance(), (Class<Object>) theClass));
+    theClass.getMethod("callSomeMethod").invoke(shadow.directlyOn(theClass.getDeclaredConstructor().newInstance(), (Class<Object>) theClass));
   }
 
   @Test
